[tool.poetry]
name = "fastapi-dapr-helper"
version = "0.1.0"
description = ""
authors = ["Clayton Black <CBlack@fanatics.com>"]
readme = "README.md"
packages = [{include = "fastapi_dapr_helper"}]

[tool.poetry.dependencies]
python = "^3.7.2"
fastapi = "^0.95.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
pylint = "^2.17.4"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
